--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Agency Page Template</title>
+    <title>Be Smart Finance</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.3.1.css" rel="stylesheet">
 	  <link href="styles.css" rel="alternate stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"><img src="images/BeSmartLogo.png" width="126" height="84"></a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"><img src="images/BeSmartLogo2.png" width="150" height="83" alt=""/>
+      <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -33,7 +33,7 @@
             <div class="col-12">
               <h1 class="text-center">Our Mission</h1>
               <p class="text-center">BeSmart Finance's mission is to empower small businesses and individuals with professional financial analysis and coaching to help manage their money and make informed financial decisions.</p>
-              <p>&nbsp;</p>
+              <p><img src="images/QuickbooksCert.png" width="175" height="220" alt=""/></p>
               <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> </p>
             </div>
           </div>
@@ -53,33 +53,39 @@
     </div>
         <div class="row">
           <div class="col-sm-6 col-lg-4">
-            <h3>Small Business Finance</h3>
-            <p>Description Here</p>
-            <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
+<h3>Small Business Finance</h3>
+<img src="images/Small_Business.svg" alt="" width="150" class="img-fluid"/>
+<p>We help your small business stay on track financially. Providing you the freedom to focus on what really matters.</p>
+<p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
           </div>
           <div class="col-sm-6 col-lg-4">
             <h3>Personal Finance</h3>
-            <p>Description Here</p>
+            <img src="images/Personal_Finance.svg" alt="" width="120" height="113" class="img-fluid1"/>
+            <p>Discover ways to help yourself, like paying your mortgage and having extra to spend.</p>
             <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
           </div>
           <div class="col-sm-6 col-lg-4">
-            <h3>Investing</h3>
-            <p>Description Here</p>
+<h3>Investing</h3>
+<img src="images/Investing_1.svg" alt="" width="260" height="135" class="img-fluid2"/>
+<p>Have you ever considered growing your money? Investing is the way to go!</p>
+<p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
+          </div>
+          <div class="col-sm-6 col-lg-4">
+<h3>Savings</h3>
+            <img src="images/Savings.svg" alt="" width="103" height="135" class="img-fluid3"/>
+            <p>Want to get ready for your next big purchase? We can help with that too.</p>
             <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
           </div>
           <div class="col-sm-6 col-lg-4">
-            <h3>Savings</h3>
-            <p>Description Here</p>
-            <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
+<h3>Tax Preperation</h3>
+<img src="images/Taxes_1.svg" alt="" width="175" class="img-fluid4"/>
+<p>Your one stop shop for end of the year tax preperation or anytime of the year as a matter of fact.</p>
+<p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
           </div>
           <div class="col-sm-6 col-lg-4">
-            <h3>Tax Preperation</h3>
-            <p>Description Here</p>
-            <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
-          </div>
-          <div class="col-sm-6 col-lg-4">
-            <h3>Retirement</h3>
-            <p> Description Here</p>
+<h3>Retirement</h3>
+            <img src="images/Retirement.svg" alt="" width="223" height="165" class="img-fluid5"/>
+            <p>Don't worry about the future; we know ways of helping you stay on track for the long run.</p>
             <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
           </div>
         </div>
